usr/src/uts/common/exec/java/java.c
@@ -144,6 +144,7 @@ javaexec(vnode_t *vp, struct execa *uap, struct uarg *args,
 	/*
 	 * Find and invoke the Java runtime environment on the file
 	 */
+	bzero(&idata, sizeof (intpdata_t));
 	idata.intp = NULL;
 	idata.intp_name[0] = jexec;
 	idata.intp_arg[0] = jexec_arg;
