usr/src/uts/common/exec/shbin/shbin.c
@@ -213,11 +213,12 @@ shbinexec(
 	}
 
 	/*
-	 * Setup interpreter data
+	 * Set up interpreter data
 	 * "--" is passed to mark the end-of-arguments before adding
-	 * the scripts file name, preventing problems when a
-	 * a script's name starts with a '-' character.
+	 * the script's file name, preventing problems when a
+	 * script's name starts with a '-' character.
 	 */
+	bzero(&idata, sizeof (intpdata_t));
 	idata.intp = NULL;
 	idata.intp_name[0] = shell_list[i];
 	idata.intp_arg[0] = "--";
